--- a/!index.html
+++ b/!index.html
@@ -6,11 +6,34 @@
     <title></title>
 </head>
 <body style="background-color: chartreuse;"> 
-
+<hr>
  <h1 style="text-align: center;"> avaliaçao html e css</h1>
+ <hr>
  <h2> ALUNO: Renan Carneiro dos Santos N:35 TURMA: 2C</h2>
+ <hr><div class="container">
+    <h1>Cadastro de Aluno</h1>
+    <form action="processar_formulario.php" method="POST">
+        <id="turma" name="Nome" required> 
  <h2>1) Inserir a primeira imagem HTML no formato png aqui</h2>
  
- <img src="pngegg.png" alt="" srcset="">
+ <img src="pngegg.png" alt="" srcset="" style="height: 350px;">
+ 
 
+ <h2>2) Inserir a segunda imagem aqui</h2>
+ <hr>
+ 
+ <img src="pngegg (3).png" alt="" srcset="" style="height: 300px;">
+<hr>
+<h2>3)Inserir um formulario, um campo de cadastro de aluno</h2>
+<div class="container">
+    <h1>Cadastro de Aluno</h1>
+    <form action="processar_formulario.php" method="POST">
+        <label for="Nome">Nome:</label>
+        <input type="text" id="turma" name="Nome" required>
+
+
+<h2>4) botao de enviar</h2>
+<button>enviar</button>
+<hr>
+        
 </body>
